src/test/data/tests/const/invalid/assign_to_const_arg.c
void a(const int b) {
    b = 10;
}

int main(void) {
    return 0;
}
